# ChangeLog for g-cpan
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Bug #313049: Detect the file extension for upstream distfiles. Relies on new
  eclass variable MODULE_A_EXT.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Avoid warning about uninitialized to lc for built-in perl core modules.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Bug #349329: check for existence of specified overlay directories before
  using them.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Bump version for next release.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan,
  lib/Gentoo/CPAN.pm:
  Match the existing version tag.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> lib/Gentoo/CPAN.pm:
  Bug #344631, #339889: Do not convert underscores to dashes. There is only a
  single package in the tree where the upstream did this for the tarball
  (dev-perl/HTML-Object), and many more where they did not.

  23 Jan 2011; Robin H. Johnson <robbat2@gentoo.org> lib/Gentoo/CPAN.pm:
  Bug #338116: Pick up configure_requires dependencies.

  24 Mar 2010; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Bug #311117: Support GCPAN_CAT/GCPAN_OVERLAY from make.conf as well as env.

  15 Feb 2010; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  New variable GCPAN_OVERLAY to control what overlay is used for output of new
  ebuilds. If not set, the previous detection behavior is used. Update manpage
  for new config stuff.

  15 Feb 2010; Robin H. Johnson <robbat2@gentoo.org> bin/g-cpan:
  Allow usage of GCPAN_CAT variable from make.conf, .gcpanrc or env to
  control what category generated ebuilds are placed into.

  15 Feb 2010; Robin H. Johnson <robbat2@gentoo.org> lib/Gentoo/CPAN.pm:
  Bug #269173: We run the configure/setup phases prior to build, but we need